@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Fix implicit mkdir in compile action
 
 0.011     2024-07-14 16:57:11+02:00 Europe/Brussels
           - Depend on ExtUtils::Builder 0.007
